Working on SNMP host monitoring